spacing issues

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -98,6 +98,16 @@
         .sub-text {
           padding-top: 24px;
         }
+
+        .small-text {
+          padding-top: 12px;
+          font-size: 12px;
+        }
+
+        .space {
+          height: 24px;
+          width: 100%;
+        }
       }
     }
 
